# physplot

./: .gitignore  README.md  pyproject.toml
physplot/: __init__.py  error.py  graph.py  propagation.py
physplot.egg-info/: PKG-INFO  SOURCES.txt
